--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,14 +2,8 @@
     color: #fafafa;
 }
 
-html {
-    position: relative;
-    min-height: 100%;
-}
-
 body {
     background-color: #000000;
-    margin-bottom: 160px;
 }
 
 .flashes h4 {
@@ -19,6 +13,24 @@ body {
 
 nav {
     border-bottom: 1px solid #fafafa;
+}
+
+.brand-logo {
+    margin: 0 0 0 20px;
+}
+
+.title-1 {
+    display: inline-block;
+    font-size: xx-large;
+    margin: 0 0 20px 0;
+    text-decoration: underline;
+}
+
+.title-2 {
+    display: inline-block;
+    font-size: xx-large;
+    margin: 0 0 20px 0;
+    text-decoration: underline;
 }
 
 .card 
@@ -87,6 +99,7 @@ p {
 .card 
 .card-image 
 img {
+    border-radius: 15px;
     padding: 5px;
 }
 
@@ -155,20 +168,56 @@ a {
 }
 
 #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 160px;
-    background-color: #f5f5f5;
-}
-
-.page-footer {
-    border-top: solid 1px #fafafa;
+    border-top: 1px solid #fafafa;
     margin-top: 40px;
 }
 
-#links {
-    text-align: end;
+#footer-1 {
+    margin: 15px 0 0 0;
+}
+
+#footer-2 {
+    margin: 0 0 15px 0;
+}
+
+.link-1 {
+    margin: 15px;
+    font-size: 40px;
+}
+
+.link-2 {
+    margin: 15px;
+    font-size: 40px;
+}
+
+.link-3 {
+    margin: 15px;
+    font-size: 40px;
+}
+
+.link-4 {
+    margin: 15px;
+    font-size: 40px;
+}
+
+.link-1 i:hover {
+    color: #282828;
+}
+
+.link-2 i:hover {
+    color: #9146FF;
+}
+
+.link-3 i:hover {
+    color: #66c0f4;
+}
+
+.link-4 i:hover {
+    color: #4267B2;
+}
+
+.copyright {
+    margin: 5px;
 }
 
 /* media queries */
@@ -178,6 +227,16 @@ a {
 }
 
 @media (max-width: 576px) { 
+    .brand-logo {
+        margin: 0 0 0 10px;
+    }
+    .title-1 {
+        font-size: x-large;
+    }
+    
+    .title-2 {
+        font-size: x-large;
+    }
     .slider {
         height:370px !important;
     }   
