--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                         <a class="btn waves-effect red darken-3 register-btn" href="{{ url_for('register') }}" type="submit"
                           name="action">
                           Register
-                          <i class="material-icons right">send</i>
+                          <i class="fas fa-file-signature right"></i>
                         </a>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
     <div class="row center-align" id="btn">
         <a href="{{ url_for('get_games') }}" class="btn waves-effect red darken-3 more-games-btn" type="submit">
             More Games
-            <i class="material-icons right">send</i>
+            <i class="fas fa-forward white-text right"></i>
         </a>
   </div>
 
