--- a/templates/register.html
+++ b/templates/register.html
@@ -13,26 +13,24 @@
                 <!-- username input -->
                 <div class="row">
                     <div class="input-field col s12 m8 l8 offset-m2 offset-l2">
-                        <i class="material-icons prefix white-text">person_add</i>
                         <input id="username" name="username" type="text" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
-                        <label for="username">Username</label>
+                        <label for="username"><i class="fas fa-user-plus white-text"></i> Username</label>
                     </div>
                 </div>
                 <!-- password input -->
                 <div class="row">
                     <div class="input-field col s12 m8 l8 offset-m2 offset-l2">
-                        <i class="material-icons prefix white-text">lock</i>
                         <input id="password" name="password"  type="password" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
-                        <label for="password">Password</label>
+                        <label for="password"><i class="fas fa-unlock white-text"></i> Password</label>
                     </div>
                 </div>
                 <!-- submit button -->
                 <div class="row center-align">
                     <button class="btn waves-effect red darken-3" type="submit">
                         Register
-                        <i class="material-icons right">send</i>
+                        <i class="fas fa-file-signature white-text"></i>
                     </button>
                 </div>
             </div>
