--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                       <p class="title-1">Game</p>
                       <p class="title-2 red-text darken-3">Review</p> 
                   </a>
-                  <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="large material-icons">menu</i></a>
+                  <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars white-text nav-icon"></i></a>
                   <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home') }}">Home</a></li>
                     <li><a href="{{ url_for('get_games') }}">Games</a></li>
