--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -27,13 +27,13 @@
                 <div class="game-info">
                     <div class="row">
                         <div class="col s10 m6 l6 offset-s1 offset-m1 offset-l1 green lighten-2 light-blue lighten-3">
-                            <i class="material-icons">build</i>
+                            <i class="fas fa-tools white-text"></i>
                             <p>
                                 <strong>Developers:</strong> {{ game.game_developers }}
                             </p>
                         </div>
                         <div class="col s10 m4 l4 offset-s1 grey darken-1">
-                            <i class="material-icons">today</i>
+                            <i class="fas fa-calendar-alt white-text"></i>
                             <p>
                                 <strong>Released: {{ game.game_released }}</strong>
                             </p>
@@ -42,13 +42,13 @@
 
                     <div class="row">
                         <div class="col s10 m4 l4 offset-s1 offset-m1 offset-l1 deep-purple lighten-3">
-                            <i class="material-icons">person</i>
+                            <i class="fas fa-users white-text"></i>
                             <p>
                                 <strong>{{ game.num_of_players }}</strong>
                             </p>
                         </div>
                         <div class="col s10 m6 l6 offset-s1 red darken-2">
-                            <i class="material-icons">extension</i>
+                            <i class="fas fa-theater-masks white-text"></i>
                             <p>
                                 <strong>Genre: {{ game.game_genre }}</strong>
                             </p>
@@ -57,7 +57,7 @@
 
                     <div class="row">
                         <div class="col s10 m10 l10 offset-s1 offset-m1 offset-l1 light-blue lighten-3">
-                            <i class="material-icons">desktop_windows</i>
+                            <i class="fas fa-gamepad white-text"></i>
                             <p>
                                 <strong>Platforms:</strong> {{ game.game_platforms }}
                             </p>
@@ -110,7 +110,7 @@
                                 <div class="col s12 center-align">
                                     <button class="btn waves-effect red darken-3 submit-btn" type="submit">
                                         Submit Review
-                                        <i class="material-icons right">send</i>
+                                        <i class="fas fa-paper-plane right"></i>
                                     </button>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
 <div class="row center-align">
     <div class="col s12">
         <a class="btn waves-effect red darken-3 back-btn" href="{{ url_for('get_games') }}" type="submit" name="action">
-            <i class="material-icons left">arrow_back</i> Back        
+            <i class="fas fa-backward white-text left"></i> Back        
         </a>
     </div>
 </div>
