--- a/templates/login.html
+++ b/templates/login.html
@@ -12,27 +12,25 @@
             <div class="card-panel grey darken-4">
                 <!-- username input -->
                 <div class="row">
-                    <div class="input-field col s12 m8 l8 offset-m2 offset-l2">
-                        <i class="material-icons prefix white-text">person</i>
+                    <div class="input-field col s12 m8 l8 offset-m2 offset-l2">                        
                         <input id="username" name="username" type="text" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
-                        <label for="username">Username</label>
+                        <label for="username"><i class="fas fa-user white-text"></i> Username</label>
                     </div>
                 </div>
                 <!-- password input -->
                 <div class="row">
                     <div class="input-field col s12 m8 l8 offset-m2 offset-l2">
-                        <i class="material-icons prefix white-text">lock</i>
                         <input id="password" name="password"  type="password" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
-                        <label for="password">Password</label>
+                        <label for="password"><i class="fas fa-unlock white-text"></i> Password</label>
                     </div>
                 </div>
                 <!-- submit button -->
                 <div class="row center-align">
                     <button class="btn waves-effect red darken-3" type="submit">
                         Log In
-                        <i class="material-icons right">send</i>
+                        <i class="fas fa-sign-in-alt right"></i>
                     </button>
                 </div>
             </div>
