--- a/templates/game_card.html
+++ b/templates/game_card.html
@@ -85,6 +85,13 @@
 
                         <form  method="POST" action="{{ url_for('add_review') }}">
                             <div class="row">
+                                <div class="col s6 m6 l6 offset-s3 offset-m3 offset-l3 center-align">
+                                    <input type="text" class="datepicker">
+                                    <label class="white-text" for="user_review">Date of review</label>
+                                </div>
+                            </div>
+
+                            <div class="row">
                                 <input type="hidden" value="{{ game.game_title }}" name="game_title" />
                                 <div class="input-field col s10 m8 l8 offset-s1 offset-m2 offset-l2">                                            
                                     <textarea id="user_review" name="user_review" minlength="5"
@@ -106,6 +113,7 @@
                                     </div>
                                 </div>
                             </div>
+                            
                             <div class="row">
                                 <div class="col s12 center-align">
                                     <button class="btn waves-effect red darken-3 submit-btn" type="submit">
