--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
                         <li>
                             <img src="https://static0.gamerantimages.com/wordpress/wp-content/uploads/2021/02/call-of-duty-black-ops-cold-war-trailer-season-2.jpg">
                             <div class="caption col s12 m10 l8 z-depth-4">
-                                <h5 class="white-text"><strong>Call Of Duty: Warzone</strong></h5>
+                                <h5 class="h5 white-text"><strong>Call Of Duty: Warzone</strong></h5>
                             </div>
                         </li>
                         <li>
@@ -21,19 +21,19 @@
                         <li>
                             <img src="https://planetsmarts.com/wp-content/uploads/2021/03/Fall-Guys-season-4-travels-to-the-future-in-its.jpg">
                             <div class="caption col s12 m10 l8 z-depth-4">
-                                <h5><strong>Fall Guys: Ultimate Knockout</strong></h5>
+                                <h5 class="h5"><strong>Fall Guys: Ultimate Knockout</strong></h5>
                             </div>
                         </li>
                         <li>
                             <img src="https://www.indiewire.com/wp-content/uploads/2020/11/MSM_MilesMorales_PS5_AirTrick.png?w=780">
                             <div class="caption caption-4 col s12 m10 l8 z-depth-4">
-                                <h5 class="white-text"><strong>Spider-Man: Miles Morales</strong></h5>
+                                <h5 class="h5 white-text"><strong>Spider-Man: Miles Morales</strong></h5>
                             </div>
                         </li>
                         <li>
                             <img src="https://venturebeat.com/wp-content/uploads/2018/10/red-dead-8.jpg?w=1200&strip=all">
                             <div class="caption col s12 m10 l8 z-depth-4">
-                                <h5><strong>Red Dead Redemption 2</strong></h5>
+                                <h5 class="h5"><strong>Red Dead Redemption 2</strong></h5>
                             </div>
                         </li>
                     </ul>
