--- a/templates/login.html
+++ b/templates/login.html
@@ -2,17 +2,17 @@
 {% block content %}
 
     <div class="row">
-        <div class="col s12 m10 l8 offset-l2 offset-m1">
+        <div class="col s10 m8 l8 offset-s1 offset-l2 offset-m2">
             <h4 class="header white-text">Log In</h4>
         </div>
     </div>
 
     <div class="row">
-        <form class="col s12 m10 l8 offset-m1 offset-l2" method="POST" action="{{ url_for('login') }}">
-            <div class="card-panel grey darken-4">
+        <form class="col s10 m8 l8 offset-s1 offset-m2 offset-l2" method="POST" action="{{ url_for('login') }}">
+            <div class="card-panel sign-in-card grey darken-4">
                 <!-- username input -->
                 <div class="row">
-                    <div class="input-field col s12 m8 l8 offset-m2 offset-l2">                        
+                    <div class="input-field col s10 m8 l8 offset-s1 offset-m2 offset-l2">                        
                         <input id="username" name="username" type="text" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
                         <label for="username"><i class="fas fa-user white-text"></i> Username</label>
@@ -20,7 +20,7 @@
                 </div>
                 <!-- password input -->
                 <div class="row">
-                    <div class="input-field col s12 m8 l8 offset-m2 offset-l2">
+                    <div class="input-field col s10 m8 l8 offset-s1 offset-m2 offset-l2">
                         <input id="password" name="password"  type="password" minlength="5" maxlength="15"
                             pattern="^[a-zA-Z0-9]{5,15}$" class="validate white-text" required>
                         <label for="password"><i class="fas fa-unlock white-text"></i> Password</label>
@@ -28,7 +28,7 @@
                 </div>
                 <!-- submit button -->
                 <div class="row center-align">
-                    <button class="btn waves-effect red darken-3" type="submit">
+                    <button class="btn waves-effect register-btn red darken-3" type="submit">
                         Log In
                         <i class="fas fa-sign-in-alt right"></i>
                     </button>
